--- a/common/external_components.yaml
+++ b/common/external_components.yaml
@@ -1,7 +1,9 @@
 external_components:
   - source:
-      type: local
-      path: components
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: lando/codeCleanup
+    refresh: 0s
     components: [ 
       homeassistant_switch_group, 
       homeassistant_sensor_group,
