--- a/example-homeThing.yml
+++ b/example-homeThing.yml
@@ -3,17 +3,39 @@ esphome:
   platform: ESP32
   board: featheresp32
 
-packages:
-  device_base: !include common/device_base.yaml
-  sensor: !include common/lilygo_tdisplay_ipod_sensor.yaml
-  switch: !include common/lilygo_tdisplay_ipod_switch.yaml
-  binary_sensor: !include common/lilygo_tdisplay_ipod_binary_sensor.yaml
+external_components:
+  - source:
+    # refresh: 0s
+      # type: git
+      # url: https://github.com/landonr/homeThing
+      # ref: lando/codeCleanup
+      type: local
+      path: components
+    components: [ 
+      homeassistant_switch_group, 
+      homeassistant_sensor_group,
+      homeassistant_light_group,
+      homeassistant_media_player,
+      homeassistant_service_group,
+      homeThing,
+    ]
 
-  home_media_player: !include homeConfig/media_player.yaml
-  home_text_sensor: !include homeConfig/text_sensor.yaml
-  home_light: !include homeConfig/light.yaml
-  home_switch: !include homeConfig/switch.yaml
-  menu_group: !include homeConfig/menu_group.yaml
+#leave this to include default ipod controls
+packages:
+    base: !include common/device_base.yaml
+    sensor: !include common/lilygo_tdisplay_ipod_sensor.yaml
+    switch: !include common/lilygo_tdisplay_ipod_switch.yaml
+    binary_sensor: !include common/lilygo_tdisplay_ipod_binary_sensor.yaml
+  # remote_package:
+  #   url: https://github.com/landonr/homeThing
+  #   ref: lando/codeCleanup # optional
+  #   files: [
+  #     common/device_base.yaml, 
+  #     common/lilygo_tdisplay_ipod_sensor.yaml,
+  #     common/lilygo_tdisplay_ipod_switch.yaml,
+  #     common/lilygo_tdisplay_ipod_binary_sensor.yaml
+  #   ]
+  #   refresh: 0s
 
 font:
   ## Font needs to be monospace!
@@ -161,27 +183,72 @@ switch:
     internal: true
     restore_mode: RESTORE_DEFAULT_ON
 
-color:
-  - id: my_red
-    red_int: 197
-    green_int: 43
-    blue_int: 48
-  - id: my_green
-    red_int: 115
-    green_int: 126
-    blue_int: 59
-  - id: my_blue
-    red_int: 129
-    green_int: 196
-    blue_int: 255
-  - id: my_yellow
-    red_int: 255
-    green_int: 204
-    blue_int: 0
-  - id: my_primary_accent
-    red_int: 22
-    green_int: 88
-    blue_int: 142
+# replace with your switch
+  - platform: homeassistant_switch_group
+    entity_id: "switch.oven_fan"
+    name: "Oven Fan"
+    id: oven_fan_switch
+
+
+# customize these
+
+# switch menu
+homeassistant_switch_group:
+  # defined above with switches
+  id: switch_group_component
+  switches:
+    - id: "oven_fan_switch"
+
+# sensor menu
+text_sensor:
+  - platform: homeassistant
+    entity_id: "sensor.vancouver_forecast"
+    name: ""
+    id: sensor_weather
+
+homeassistant_sensor_group:
+  id: sensor_group_component
+  sensors:
+    - id: sensor_weather
+
+# light menu
+light:
+  - platform: homeassistant_light_group
+    id: light_office_lamp
+    entity_id: light.office_lamp
+    name: Office Lamp
+
+homeassistant_light_group:
+  id: light_group_component
+  lights:
+    - id: light_office_lamp
+
+# media player menu
+media_player:
+  - platform: homeassistant_media_player
+    name: Beam
+    entity_id: "media_player.beam"
+    id: media_player_beam
+    type: sonos
+
+homeassistant_media_player:
+  id: media_group_component
+  media_players:
+    - id: media_player_beam
+      type: sonos
+
+# service menu
+homeassistant_service_group:
+  id: service_group_component
+  commands:
+    - text: "desk nudge up"
+      command:
+        - lambda: |-
+            ESP_LOGI("homeassistant_service_group", "nudge up");
+        - homeassistant.service:
+            service: button.press
+            data:
+              entity_id: "button.desk_position_nudge_up"
 
 homeThing:
   id: homeThingMenu
@@ -200,12 +267,6 @@ homeThing:
     then:
       component.update: my_display
   display_state:
-    colors:
-      accent_primary: my_primary_accent
-      red: my_red
-      green: my_green
-      blue: my_blue
-      yellow: my_yellow
     draw_battery_level: true
     font_small: small_font
     font_medium: medium_font
