move wifi stuff to home config

--- a/example-homeThing.yml
+++ b/example-homeThing.yml
@@ -5,12 +5,12 @@ esphome:
 
 external_components:
   - source:
-    # refresh: 0s
-      # type: git
-      # url: https://github.com/landonr/homeThing
-      # ref: lando/codeCleanup
-      type: local
-      path: components
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: lando/codeCleanup
+    refresh: 0s
+      # type: local
+      # path: components
     components: [ 
       homeassistant_switch_group, 
       homeassistant_sensor_group,
@@ -22,20 +22,21 @@ external_components:
 
 #leave this to include default ipod controls
 packages:
-    base: !include common/device_base.yaml
-    sensor: !include common/lilygo_tdisplay_ipod_sensor.yaml
-    switch: !include common/lilygo_tdisplay_ipod_switch.yaml
-    binary_sensor: !include common/lilygo_tdisplay_ipod_binary_sensor.yaml
-  # remote_package:
-  #   url: https://github.com/landonr/homeThing
-  #   ref: lando/codeCleanup # optional
-  #   files: [
-  #     common/device_base.yaml, 
-  #     common/lilygo_tdisplay_ipod_sensor.yaml,
-  #     common/lilygo_tdisplay_ipod_switch.yaml,
-  #     common/lilygo_tdisplay_ipod_binary_sensor.yaml
-  #   ]
-  #   refresh: 0s
+  # base: !include common/device_base.yaml
+  # sensor: !include common/lilygo_tdisplay_ipod_sensor.yaml
+    # switch: !include common/lilygo_tdisplay_ipod_switch.yaml
+    # binary_sensor: !include common/lilygo_tdisplay_ipod_binary_sensor.yaml
+  remote_package:
+    url: https://github.com/landonr/homeThing
+    ref: lando/codeCleanup # optional
+    files: [
+      common/device_base.yaml, 
+      common/lilygo_tdisplay_ipod_sensor.yaml,
+      common/lilygo_tdisplay_ipod_switch.yaml,
+      common/lilygo_tdisplay_ipod_binary_sensor.yaml
+    ]
+    refresh: 0s
+  setup: !include homeConfig/device_setup.yaml
 
 font:
   ## Font needs to be monospace!
