--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -3,8 +3,38 @@ esphome:
   platform: ESP32
   board: m5stack-fire
 
+external_components:
+  - source:
+      type: git
+      url: https://github.com/ssieb/custom_components
+    components: [ ip5306 ]
+  - source:
+    #   type: git
+    #   url: https://github.com/landonr/homeThing
+    #   ref: lando/codeCleanup
+    # refresh: 0s
+      type: local
+      path: components
+    components: [ 
+      homeassistant_switch_group, 
+      homeassistant_sensor_group,
+      homeassistant_light_group,
+      homeassistant_media_player,
+      homeassistant_service_group,
+      homeThing,
+    ]
+
 packages:
   device_base: !include common/device_base.yaml
+  sensor: !include common/lilygo_tdisplay_ipod_sensor.yaml
+  switch: !include common/lilygo_tdisplay_ipod_switch.yaml
+  binary_sensor: !include common/lilygo_tdisplay_ipod_binary_sensor.yaml
+  setup: !include homeConfig/device_setup.yaml
+  home_media_player: !include homeConfig/media_player.yaml
+  home_text_sensor: !include homeConfig/text_sensor.yaml
+  home_light: !include homeConfig/light.yaml
+  home_switch: !include homeConfig/switch.yaml
+  menu_group: !include homeConfig/menu_group.yaml
   
 font:
   ## Font needs to be monospace!
@@ -72,12 +102,6 @@ font:
         '󰌵', # mdi-lightbulb
         '󰌶', # mdi-lightbulb-outline
       ]
-
-external_components:
-  - source:
-      type: git
-      url: https://github.com/ssieb/custom_components
-    components: [ ip5306 ]
 
 i2c:
   sda: 21
