--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -3,8 +3,37 @@ esphome:
   platform: ESP32
   board: featheresp32
 
+external_components:
+  - source:
+    #   type: git
+    #   url: https://github.com/landonr/homeThing
+    #   ref: lando/codeCleanup
+    # refresh: 0s
+      type: local
+      path: components
+    components: [ 
+      homeassistant_switch_group, 
+      homeassistant_sensor_group,
+      homeassistant_light_group,
+      homeassistant_media_player,
+      homeassistant_service_group,
+      homeThing,
+    ]
+
 packages:
   device_base: !include common/device_base.yaml
+  ipod_control_backlight: !include common/ipod/lilygo_tdisplay_ipod_backlight.yaml
+  ipod_control_battery: !include common/ipod/lilygo_tdisplay_ipod_battery.yaml
+  ipod_control_binary_sensor: !include common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml
+  ipod_control_rotary: !include common/ipod/lilygo_tdisplay_ipod_rotary.yaml
+  ipod_control_sleep: !include common/ipod/lilygo_tdisplay_ipod_sleep.yaml
+  ipod_control_switch: !include common/ipod/lilygo_tdisplay_ipod_switch.yaml
+  setup: !include homeConfig/device_setup.yaml
+  home_media_player: !include homeConfig/media_player.yaml
+  home_text_sensor: !include homeConfig/text_sensor.yaml
+  home_light: !include homeConfig/light.yaml
+  home_switch: !include homeConfig/switch.yaml
+  menu_group: !include homeConfig/menu_group.yaml
 
 font:
   ## Font needs to be monospace!
@@ -72,223 +101,6 @@ font:
         '󰌵', # mdi-lightbulb
         '󰌶', # mdi-lightbulb-outline
       ]
-
-deep_sleep:
-  id: deep_sleep_
-
-sensor:
-  - platform: rotary_encoder
-    filters:
-    - throttle: 0.01s
-    name: "Rotary Encoder"
-    internal: true
-    pin_a:
-      number: 12
-      mode:
-        input: true
-        pullup: true
-    pin_b:
-      number: 13
-      mode:
-        input: true
-        pullup: true
-    id: rotary
-    on_clockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollClockwise(id(rotary).state);
-    on_anticlockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollCounterClockwise(id(rotary).state);
-## Battery
-  - platform: adc
-    pin: 34
-    attenuation: 11db
-    name: "vccadc"
-    update_interval: 250ms
-    id: vcc_adc
-    internal: true
-    on_value:
-      then:
-        lambda: |-
-          if (!id(charging)->has_state()) {
-              id(charging)->publish_state(false);
-          } else if (id(vcc_adc).state > 2.23) {
-            if (!id(charging).state) {
-              id(charging)->publish_state(true);
-            }
-          } else {
-            if (id(charging).state) {
-              id(charging)->publish_state(false);
-            }
-          }
-          id(vcc_adc_avg).publish_state(id(vcc_adc).state);
-  - platform: template
-    id: vcc_adc_avg
-    filters:
-      - sliding_window_moving_average:
-          window_size: 4
-          send_every: 4
-    on_value :
-      then:
-        - sensor.template.publish:
-            id: batteryVoltage
-            state: !lambda 'return id(vcc_adc).state;'
-  - platform: template
-    name: batteryVoltage
-    id: batteryVoltage
-    internal: true
-    unit_of_measurement: 'V'
-    on_value :
-      then:
-        - sensor.template.publish:
-            id: battery_percent
-            state: !lambda 'return (id(batteryVoltage).state * 118) - 162;'
-  - platform: template
-    name: Battery Percent
-    id: battery_percent
-    unit_of_measurement: '%'
-    on_value_range:
-      below: 5
-      then:
-        lambda: |-
-          ESP_LOGE("SLEEP", "Low Power Supply %.3fV! Sleeping to protect battery", id(battery_percent).state);
-          id(sleep_toggle).turn_on();
-
-binary_sensor:
-  - platform: template
-    id: charging
-  - platform: gpio
-    pin:
-      number: GPIO0
-      inverted: true
-      mode:
-        input: true
-        pullup: true
-    name: "T-Display Button Input 0"
-    id: tdisplay_button_input_0
-    internal: true
-    on_press:
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressScreenLeft();
-    on_release:
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonReleaseScreenLeft();
-  - platform: gpio
-    pin:
-      number: GPIO35
-      inverted: true
-    name: "T-Display Button Input 1"
-    id: tdisplay_button_input_1
-    internal: true
-    on_press:
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressScreenRight();
-  - platform: gpio
-    internal: true
-    pin:
-      number: 21
-      inverted: true
-      mode:
-        input: true
-        pullup: true
-    id: sw5
-    on_press:
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressLeft();
-  - platform: gpio
-    internal: true
-    pin:
-      number: 22
-      inverted: true
-      mode:
-        input: true
-        pullup: true
-    id: sw4
-    on_press:
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressUp();
-  - platform: gpio
-    internal: true
-    pin:
-      number: 17
-      inverted: true
-      mode:
-        input: true
-        pullup: true
-    id: sw3
-    on_press:
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressRight();
-  - platform: gpio
-    internal: true
-    pin:
-      number: 2
-      inverted: true
-      mode:
-        input: true
-        pullup: true
-    id: sw2
-    on_press:
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressDown();
-  - platform: gpio
-    internal: true
-    pin:
-      number: 15
-      inverted: true
-      mode:
-        input: true
-        pullup: true
-    id: sw1
-    on_click:
-      min_length: 5ms
-      max_length: 350ms
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelect();
-    on_multi_click:
-    - timing:
-        - ON for at least 0.5s
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelectHold();
-
-switch:
-  - platform: gpio
-    pin:
-      number: 27
-      inverted: false
-    id: comb
-    internal: true
-  - platform: gpio
-    pin:
-      number: 26
-      inverted: false
-    id: coma
-    internal: true
-  - platform: template
-    name: Sleep Toggle
-    id: sleep_toggle
-    optimistic: true
-    on_turn_on:
-      then:
-        - deep_sleep.enter:
-            id: deep_sleep_
-  - platform: gpio
-    pin: GPIO4
-    name: "Backlight"
-    id: backlight
-    internal: true
-    restore_mode: RESTORE_DEFAULT_ON
 
 spi:
   clk_pin: GPIO18
