--- a/homeConfig/menu_group.yaml
+++ b/homeConfig/menu_group.yaml
@@ -24,10 +24,12 @@ homeassistant_light_group:
 homeassistant_media_player:
   id: media_group_component
   media_players:
-    - id: media_player_beam
+    # - id: media_player_beam
+    #   type: sonos
+    # - id: media_player_tv
+    #   type: roku
+    - id: media_player_spotify
       type: sonos
-    - id: media_player_tv
-      type: roku
 
 homeassistant_service_group:
   id: service_group_component
