--- a/homeConfig/media_player.yaml
+++ b/homeConfig/media_player.yaml
@@ -3,16 +3,21 @@ media_player:
     name: Beam
     entity_id: "media_player.beam"
     id: media_player_beam
-    type: sonos
+    type: speaker
   - platform: homeassistant_media_player
     name: TV
     entity_id: "media_player.55_tcl_roku_tv"
     id: media_player_tv
     type: roku
     soundbar:
-      sonos: media_player_beam
+      speaker: media_player_beam
   - platform: homeassistant_media_player
     name: Spotify
     entity_id: "media_player.spotify_landorghini"
     id: media_player_spotify
-    type: sonos
+    type: speaker
+  - platform: homeassistant_media_player
+    name: Tower
+    entity_id: "media_player.tower"
+    id: media_player_tower
+    type: speaker
