--- a/homething-lilygo.yaml
+++ b/homething-lilygo.yaml
@@ -130,6 +130,8 @@ color:
 
 homeThing:
   id: homeThingMenu
+  settings:
+    sleep_after: 14400
   sleep_switch: sleep_toggle
   backlight: backlight
   battery:
@@ -168,7 +170,6 @@ display:
   - platform: st7789v
     model: TTGO_TDisplay_135x240
     id: my_display
-    backlight_pin: GPIO4
     cs_pin: GPIO5
     dc_pin: GPIO16
     reset_pin: GPIO23
