--- a/homeConfig/light.yaml
+++ b/homeConfig/light.yaml
@@ -1,16 +1,8 @@
 light:
   - platform: homeassistant_light_group
-    id: light_bathroom_lights
-    entity_id: light.bathroom_lights
-    name: Bathroom 
-  - platform: homeassistant_light_group
-    id: light_bedroom_lights
-    entity_id: light.bedroom_lights
-    name: Bedroom 
-  - platform: homeassistant_light_group
-    id: light_kitchen_lights
-    entity_id: light.kitchen_lights
-    name: Kitchen 
+    id: light_rgb_lights
+    entity_id: light.rgb_lights
+    name: Color Lights 
   - platform: homeassistant_light_group
     id: light_living_room_lights
     entity_id: light.living_room_lights
