--- a/homeConfig/media_player.yaml
+++ b/homeConfig/media_player.yaml
@@ -26,3 +26,9 @@ media_player:
     entity_id: "media_player.tower"
     id: media_player_tower
     type: speaker
+  - platform: homeassistant_media_player
+    name: Kodi
+    entity_id: "media_player.kodi_desktop"
+    id: media_player_kodi
+    type: kodi
+    
