--- a/example-homeThing.yaml
+++ b/example-homeThing.yaml
@@ -148,13 +148,22 @@ media_player:
     name: Beam
     entity_id: "media_player.beam"
     id: media_player_beam
-    type: sonos
+    type: speaker
+  - platform: homeassistant_media_player
+    name: TV
+    entity_id: "media_player.55_tcl_roku_tv"
+    id: media_player_tv
+    type: roku
+    soundbar:
+      speaker: media_player_beam
 
 homeassistant_media_player:
   id: media_group_component
   media_players:
     - id: media_player_beam
-      type: sonos
+      type: speaker
+    - id: media_player_tv
+      type: roku
 
 # service menu
 homeassistant_service_group:
