--- a/example-homeThing.yaml
+++ b/example-homeThing.yaml
@@ -30,77 +30,12 @@ packages:
       common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml,
       common/ipod/lilygo_tdisplay_ipod_rotary.yaml,
       common/ipod/lilygo_tdisplay_ipod_sleep.yaml,
-      common/ipod/lilygo_tdisplay_ipod_switch.yaml
+      common/ipod/lilygo_tdisplay_ipod_switch.yaml,
+      common/fonts.yaml,
+      common/icon_fonts.yaml
     ]
     refresh: 0s
   setup: !include homeConfig/device_setup.yaml
-
-font:
-  ## Font needs to be monospace!
-    - file: "fonts/iosevka-heavy.ttf"
-      id: large_heavy_font
-      size: 24
-      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓčëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
-    - file: "fonts/iosevka.ttf"
-      id: large_font
-      size: 24
-      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓčëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
-    - file: "fonts/iosevka.ttf"
-      id: medium_font
-      size: 15
-      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓčëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
-    - file: "fonts/iosevka.ttf"
-      id: small_font
-      size: 14
-      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓčëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
-    - file: 'fonts/homeThingFontLogo.ttf' 
-      id: home_thing_logo
-      size: 48
-      glyphs: [
-        '',
-      ]  
-    - file: 'fonts/materialdesignicons-webfont.ttf' 
-      id: material_font_large
-      size: 19
-      glyphs: [
-        '󰐊', # mdi-play
-        '󰓛', # mdi-stop
-        '󰏤', # home-pause
-        '󰽥', # mdi-moon-waning-crescent
-        '󰒝', # mdi-shuffle
-        '󰒞', # mdi-shuffle-disabled
-        '󰕾', # mdi-volume-high
-        '󰕿', # mdi-volume-low
-        '󰚺', # mdi-plex
-        '󰝆', # mdi-netflix
-        '󰗃', # mdi-youtube
-        '󰓇', # mdi-spotify
-        '󰔂', # mdi-television
-        '󰋜', # mdi-home
-        '󰌵', # mdi-lightbulb
-        '󰌶', # mdi-lightbulb-outline
-      ]  
-    - file: 'fonts/materialdesignicons-webfont.ttf' 
-      id: material_font_small
-      size: 18
-      glyphs: [
-        '󰐊', # mdi-play
-        '󰓛', # mdi-stop
-        '󰏤', # home-pause
-        '󰽥', # mdi-moon-waning-crescent
-        '󰒝', # mdi-shuffle
-        '󰒞', # mdi-shuffle-disabled
-        '󰕾', # mdi-volume-high
-        '󰕿', # mdi-volume-low
-        '󰚺', # mdi-plex
-        '󰝆', # mdi-netflix
-        '󰗃', # mdi-youtube
-        '󰓇', # mdi-spotify
-        '󰔂', # mdi-television
-        '󰋜', # mdi-home
-        '󰌵', # mdi-lightbulb
-        '󰌶', # mdi-lightbulb-outline
-      ]
 
 # customize these
 
