--- a/homething-lilygo.yaml
+++ b/homething-lilygo.yaml
@@ -34,77 +34,8 @@ packages:
   home_light: !include homeConfig/light.yaml
   home_switch: !include homeConfig/switch.yaml
   menu_group: !include homeConfig/menu_group.yaml
-
-font:
-  ## Font needs to be monospace!
-    - file: "fonts/iosevka-heavy.ttf"
-      id: large_heavy_font
-      size: 24
-      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓčëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
-
-    - file: "fonts/iosevka.ttf"
-      id: large_font
-      size: 24
-      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓčëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
-
-    - file: "fonts/iosevka.ttf"
-      id: medium_font
-      size: 15
-      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓčëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
-
-    - file: "fonts/iosevka.ttf"
-      id: small_font
-      size: 14
-      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓčëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
-
-    - file: 'fonts/homeThingFontLogo.ttf' 
-      id: home_thing_logo
-      size: 48
-      glyphs: [
-        '',
-      ]  
-    - file: 'fonts/materialdesignicons-webfont.ttf' 
-      id: material_font_large
-      size: 19
-      glyphs: [
-        '󰐊', # mdi-play
-        '󰓛', # mdi-stop
-        '󰏤', # home-pause
-        '󰽥', # mdi-moon-waning-crescent
-        '󰒝', # mdi-shuffle
-        '󰒞', # mdi-shuffle-disabled
-        '󰕾', # mdi-volume-high
-        '󰕿', # mdi-volume-low
-        '󰚺', # mdi-plex
-        '󰝆', # mdi-netflix
-        '󰗃', # mdi-youtube
-        '󰓇', # mdi-spotify
-        '󰔂', # mdi-television
-        '󰋜', # mdi-home
-        '󰌵', # mdi-lightbulb
-        '󰌶', # mdi-lightbulb-outline
-      ]  
-    - file: 'fonts/materialdesignicons-webfont.ttf' 
-      id: material_font_small
-      size: 18
-      glyphs: [
-        '󰐊', # mdi-play
-        '󰓛', # mdi-stop
-        '󰏤', # home-pause
-        '󰽥', # mdi-moon-waning-crescent
-        '󰒝', # mdi-shuffle
-        '󰒞', # mdi-shuffle-disabled
-        '󰕾', # mdi-volume-high
-        '󰕿', # mdi-volume-low
-        '󰚺', # mdi-plex
-        '󰝆', # mdi-netflix
-        '󰗃', # mdi-youtube
-        '󰓇', # mdi-spotify
-        '󰔂', # mdi-television
-        '󰋜', # mdi-home
-        '󰌵', # mdi-lightbulb
-        '󰌶', # mdi-lightbulb-outline
-      ]
+  fonts: !include common/fonts.yaml
+  icon_fonts: !include common/icon_fonts.yaml
 
 color:
   - id: my_red
