--- a/common/ipod/lilygo_tdisplay_ipod_backlight.yaml
+++ b/common/ipod/lilygo_tdisplay_ipod_backlight.yaml
@@ -6,6 +6,6 @@ output:
 light:
   - platform: monochromatic
     output: gpio4
-    name: "Backlight"
+    name: "${friendly_name} Backlight"
     id: backlight
     restore_mode: ALWAYS_ON 
