--- a/example-homeThing.yaml
+++ b/example-homeThing.yaml
@@ -4,22 +4,6 @@ esphome:
   platform: ESP32
   board: featheresp32
 
-# don't modify: include homeThing
-external_components:
-  - source:
-      type: git
-      url: https://github.com/landonr/homeThing
-      ref: lando/codeCleanup
-    refresh: 0s
-    components: [ 
-      homeassistant_switch_group, 
-      homeassistant_sensor_group,
-      homeassistant_light_group,
-      homeassistant_media_player,
-      homeassistant_service_group,
-      homeThing,
-    ]
-
 # maybe modify: display setup
 spi:
   clk_pin: GPIO18
@@ -56,7 +40,6 @@ packages:
       common/icon_fonts.yaml
     ]
     refresh: 0s
-  setup: !include homeConfig/device_setup.yaml
 
 # modify: device setup
 substitutions:
@@ -167,3 +150,44 @@ homeThing:
     font_material_large: material_font_large
     font_material_small: material_font_small
     font_logo: home_thing_logo
+
+# only remove components if you aren't using the group
+external_components:
+  - source:
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: lando/codeCleanup
+    refresh: 0s
+    components: [ 
+      homeassistant_switch_group, 
+      homeassistant_sensor_group,
+      homeassistant_light_group,
+      homeassistant_media_player,
+      homeassistant_service_group,
+      homeThing,
+    ]
+
+# don't need to modify past here
+logger:
+  level: INFO
+
+wifi:
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
+  fast_connect: true
+  id: wifi_id
+  ap:
+    ssid: "${friendly_name} Fallback"
+    password: !secret wifi_fallback_password
+
+ota:
+
+api:
+  id: homeassistant_api_id
+  services:
+    - service: goto_screen
+      variables:
+        screen_name: string
+      then:
+      - lambda: |-
+          id(homeThingMenu)->goToScreenFromString(screen_name);
