--- a/homeConfig/light.yaml
+++ b/homeConfig/light.yaml
@@ -8,6 +8,6 @@ light:
     entity_id: light.living_room_lights
     name: Living Room 
   - platform: homeassistant_light_group
-    id: light_office_lamp
-    entity_id: light.office_lamp
-    name: Office Lamp
+    id: light_desk_lamp
+    entity_id: light.desk_lamp
+    name: Desk Lamp
