--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -26,6 +26,7 @@ external_components:
      type: local
      path: components
    components: [ 
+    homeassistant_component, 
      homeassistant_switch_group, 
      homeassistant_sensor_group,
      homeassistant_light_group,
