--- a/m5stickcplus.yaml
+++ b/m5stickcplus.yaml
@@ -21,6 +21,7 @@ external_components:
      type: local
      path: components
    components: [ 
+    homeassistant_component, 
      homeassistant_switch_group, 
      homeassistant_sensor_group,
      homeassistant_light_group,
