--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -15,6 +15,7 @@ external_components:
       type: local
       path: components
     components: [ 
+      homeassistant_component, 
       homeassistant_switch_group, 
       homeassistant_sensor_group,
       homeassistant_light_group,
