--- a/homething-lilygo.yaml
+++ b/homething-lilygo.yaml
@@ -11,7 +11,7 @@ external_components:
     # refresh: 0s
       type: local
       path: components
-    components: [ 
+    components: [
       homeassistant_component, 
       homeassistant_switch_group, 
       homeassistant_sensor_group,
@@ -19,7 +19,14 @@ external_components:
       homeassistant_media_player,
       homeassistant_service_group,
       homeThing,
+      media_player_source,
+      sonos_source_component,
     ]
+
+sonos_source_component:
+  id: hi
+  # - type: sonos
+    # entity_id: ok
 
 packages:
   device_base: !include common/device_base.yaml
