--- a/homeConfig/light.yaml
+++ b/homeConfig/light.yaml
@@ -11,3 +11,15 @@ light:
     id: light_desk_lamp
     entity_id: light.desk_lamp
     name: Desk Lamp
+  - platform: homeassistant_light_group
+    id: light_kitchen_lights
+    entity_id: light.kitchen_lights
+    name: Kitchen
+  - platform: homeassistant_light_group
+    id: light_bathroom_lights
+    entity_id: light.bathroom_lights
+    name: Bathroom
+  - platform: homeassistant_light_group
+    id: light_bedroom_lights
+    entity_id: light.bedroom_lights
+    name: Bedroom
